chapter13/nginx-secrets/volume-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test-volume
  name: test-volume-secrets 
  namespace: my-ext-secret
spec:
  containers:
  - image: busybox
    name: test
    resources: {}
    command:
    - sh
    - -c 
    - 'cat /etc/secrets/somepassword'
    volumeMounts:
    - name: mypassword
      mountPath: /etc/secrets
  volumes:
  - name: mypassword
    secret:
      secretName: secret-to-be-created
  dnsPolicy: ClusterFirst
  restartPolicy: Never
