chapter13/nginx-secrets/nginx-secrets.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx-web
  name: nginx-secrets
  namespace: my-ext-secret
  annotations:
    container.apparmor.security.beta.kubernetes.io/vault-agent: "unconfined"
    container.apparmor.security.beta.kubernetes.io/vault-agent-init: "unconfined"
    vault.hashicorp.com/service: "https://vault.apps.IPADDR.nip.io"
    vault.hashicorp.com/agent-inject: "true"
    vault.hashicorp.com/log-level: trace
    vault.hashicorp.com/role: extsecret
    vault.hashicorp.com/tls-skip-verify: "true"
    vault.hashicorp.com/agent-inject-secret-myenv: 'secret/data/extsecret/config'
    vault.hashicorp.com/secret-volume-path-myenv: '/etc/secrets'
spec:
  containers:
  - image: nginx
    name: nginx-web
    volumeMounts:
      - mountPath: /etc/nginx/conf.d
        name: sources
  dnsPolicy: ClusterFirst
  restartPolicy: Never
  serviceAccountName: ext-secret-vault
  serviceAccount: ext-secret-vault
  volumes:
  - name: sources
    configMap:
      name: nginx-html
      defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-web
  namespace: my-ext-secret
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http-service
  selector:
    app: nginx-web
