chapter13/nginx-secrets/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-secrets
  namespace: my-ext-secret
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-web
            port: 
              number: 80
        path: "/"
        pathType: Prefix
    host: secret.IPADDR.nip.io
